--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <br>
         <div>Problem 4</div>
         <div>Your problem 4 html goes here</div>
+        <div>Your stack adds up to <span id="totalCount"></span></div>
         <br>
         <div>Problem 5</div>
         <div>Your problem 5 html goes here</div>
