--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@
         <br>
         <div>Problem 5</div>
         <div>Your problem 5 html goes here</div>
+        <div>Original ad: <span id="originalAd"></span></div>
+        <div>Corrected ad: <span id="newAd"></span></div>
     </body>
 </html>
